--- a/jenkins-ci-cd/10-runner-approach-1/Jenkinsfile
+++ b/jenkins-ci-cd/10-runner-approach-1/Jenkinsfile
@@ -4,17 +4,27 @@ pipeline{
 
     stages{
 
-        stage('Run Test'){
+        stage('Start Grid'){
             steps{
-                sh "docker-compose up"
+                sh "docker-compose -f grid.yaml up -d"
             }
         }
 
-        stage('Bring Grid-down'){
+        stage('Run Test'){
             steps{
-                sh "docker-compose down"
-            }            
-        }  
+                sh "docker-compose -f test-suites.yaml up --pull=always"
+            }
+        }
+
+    }
+
+    post {
+        always {
+            sh "docker-compose -f grid.yaml down"
+            sh "docker-compose -f test-suites.yaml down"
+            archiveArtifacts artifacts: 'output/flight-reservation/emailable-report.html', followSymlinks: false
+            archiveArtifacts artifacts: 'output/vendor-portal/emailable-report.html', followSymlinks: false
+        }
     }
 
 }
