--- a/grid.yaml
+++ b/grid.yaml
@@ -8,11 +8,13 @@ services:
     depends_on:
       - hub
     deploy:
-      replicas: 1
+      replicas: 0
     env_file: .env
   firefox:
     image: selenium/node-firefox:4.16
     shm_size: '2g'
     depends_on:
       - hub
+    deploy:
+      replicas: 0
     env_file: .env
